// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price Facet Components FacetPriceContainer 1`] = `
<DocumentFragment>
  .c0 {
  width: calc(100% - 2rem);
  margin: auto;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Price Facet Components PriceLabel 1`] = `
<DocumentFragment>
  .c0 {
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
}

<span
    class="c0"
  >
    Test
  </span>
</DocumentFragment>
`;

exports[`Price Facet Components PriceSliderLabel 1`] = `
<DocumentFragment>
  .c0 {
  margin-right: -1rem;
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  >
    Test
  </p>
</DocumentFragment>
`;

exports[`Price Facet Components StyledSlider 1`] = `
<DocumentFragment>
  .c0 >:nth-child(1) {
  height: 0.1875rem;
  opacity: 1;
  color: #c7c5c5;
}

.c0 >:nth-child(2) {
  height: 0.1875rem;
}

.c0 >:nth-child(4) {
  background-color: #c7c5c5;
  height: 0.8125rem;
  width: 0.1875rem;
  margin-top: -0.3125rem;
}

.c0 >:nth-child(5) {
  left: 100%;
  font-size: 0.875rem;
  top: 2rem;
  color: #000000;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  width: 12.5rem;
  padding-left: 5.75rem;
}

.c0 >:nth-child(6) {
  background-color: #c7c5c5;
  height: 0.8125rem;
  width: 0.1875rem;
  margin-top: -0.3125rem;
}

.c0 >:nth-child(7) {
  left: 100%;
  font-size: 0.875rem;
  top: 2rem;
  color: #000000;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  width: 12.5rem;
  padding-right: 5.75rem;
  text-align: right;
}

.c0 span[role="slider"] {
  height: 1.5rem;
  width: 1.5rem;
  background-color: #fff;
  border: 0.125rem solid #c7c5c5;
  margin-top: -0.625rem;
  margin-left: -0.75rem;
}

.c0 span[role="slider"]:focus,
.c0 span[role="slider"]:hover,
.c0 span[role="slider"]:active {
  box-shadow: none;
}

.c0 span[role="slider"]:after {
  inset: 0;
  width: 0.5rem;
  margin: auto;
  height: 0.5rem;
  background-color: #000;
}

.c0 span[role="slider"] span {
  left: calc(-50% + 0.25rem);
}

<span
    class="MuiSlider-root MuiSlider-colorPrimary c0"
  >
    <span
      class="MuiSlider-rail"
    />
    <span
      class="MuiSlider-track"
      style="left: 0%;"
    />
    <input
      type="hidden"
      value="NaN"
    />
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="NaN"
      class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
      data-index="0"
      role="slider"
      tabindex="0"
    />
  </span>
</DocumentFragment>
`;
